--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,5 +46,8 @@
     "Peculiarities": "Peculiarities",
     "Model" : "Model",
     "Our Product": "Our Product",
-    "Katalog": "Katalog"
+    "Katalog": "Katalog",
+    "See All The Product": "See All The Product",
+    "Photo of Product": "Photo of Product",
+    "No product found": "Choose category"
 }
