--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,5 +46,8 @@
   "Peculiarities": "Особенности",
   "Model": "Модель",
   "Our Product": "Наша продукт",
-  "Katalog": "Каталог"
+  "Katalog": "Каталог",
+  "See All The Product": "Посмотреть все продукты",
+  "Photo of Product": "Фото продукта",
+  "No product found": "Вибирите категорию"
 }
