--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -46,5 +46,8 @@
   "Peculiarities": "Хусусиятҳо",
   "Model": "Модел",
   "Our Product": "Маҳсулоти мо",
-  "Katalog": "Каталог"
+  "Katalog": "Каталог",
+  "See All The Product": "Ҳамаи маҳсулотро бинед",
+  "Photo of Product": "Аксҳои маҳсулот",
+  "No product found": "Махсулотро интихоб кунед."
 }
